manifests/seraphim/prod/rook/HTTPRoute-ceph.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph
  namespace: rook-ceph
spec:
  hostnames:
    - ceph.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: rook-ceph-mgr-dashboard
          port: 7000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
